trunk/Archive2/f8/3344965403611d/output
main.cpp: In function 'int main()':
main.cpp:10:27:   in constexpr expansion of 'f()'
main.cpp:5:41: error: 'printf(((const char*)"a side effect!\012"))' is not a constant expression
         return printf("a side effect!\n");
                                         ^
main.cpp:10:28: note: in template argument for type 'long unsigned int' 
         std::array<int, f()> a;
                            ^
main.cpp:10:31: error: invalid type in declaration before ';' token
         std::array<int, f()> a;
                               ^
main.cpp:10:30: warning: unused variable 'a' [-Wunused-variable]
         std::array<int, f()> a;
                              ^
