trunk/Archive2/f8/3344965403611d/main.cpp
    #include <array>
    
    constexpr int f()
    {
        return printf("a side effect!\n");
    }
    
    int main()
    {
        std::array<int, f()> a;
 
    }